# aws-sso-creds-manager

./: Cargo.toml  README.md
src/: aws_sso.rs  config.rs  main.rs
