[package]
name = "aws-sso-creds-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55"
aws-sdk-sso = "0.28"
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-ini = "0.19"
aws-sdk-ssooidc = "0.28.0"
regex = "1.8"
sha1 = "0.10"
chrono = { version = "0.4.26", features = ["serde"] }
